cmake_minimum_required(VERSION 3.9)
project(pus)

#add_subdirectory(pus-01-gniazda_tcp_i_udp-linux)
#add_subdirectory(pus-02-protokoly_ipv4_i_ipv6-linux)
#add_subdirectory(pus-03-opcje_ip_i_gniazda_surowe-linux)
#add_subdirectory(pus-04-protokol_sctp-linux)
#add_subdirectory(pus-07-netfilter)
#add_subdirectory(pus-08-uprawnienia-linux)
#add_subdirectory(pus-11-libpcap)
add_subdirectory(pus-12-ssh)